[package]
name = "bevy_instancing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# TODO : Change to  official when PR https://github.com/bevyengine/bevy/pull/6155 merged.
bevy = { git = "https://github.com/Parallel-Paradox/bevy.git", rev = "1468803" }
bytemuck = "1.12"
